[package]
name = "jsonschema_1c"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
native-1c = { git = "https://github.com/tuplecats/rust-native-1c" }
jsonschema = "0.38.1"
serde_json = "1.0"
fluent-uri = "0.4.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
