[package]
name = "jsonschema_1c"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
addin1c = "0.7.0"
jsonschema = { version = "0.40.0", features = ["arbitrary-precision"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
